// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button should have spinner and text if isLoading is true 1`] = `
<div>
  <button
    class="flex justify-center items-center font-semibold leading-6 border border-gray-300 disabled:opacity-70 disabled:cursor-not-allowed rounded-md shadow-sm focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 bg-blue-600 text-white hover:bg-blue-500  focus-visible:outline-blue-600 px-6 py-2 text-md"
    type="button"
  >
    <svg
      class="animate-spin h-4 w-4 text-blue-600 text-current"
      data-testid="spinner"
      fill="none"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <circle
        class="opacity-25"
        cx="12"
        cy="12"
        r="10"
        stroke="currentColor"
        stroke-width="4"
      />
      <path
        class="opacity-75"
        d="M4 12a8 8 0 018-8V0C5.373 0 0 5.373 0 12h4zm2 5.291A7.962 7.962 0 014 12H0c0 3.042 1.135 5.824 3 7.938l3-2.647z"
        fill="currentColor"
      />
    </svg>
    <span
      class="sr-only"
    >
      Loading
    </span>
    <span
      class="mx-2"
      data-testid="button-text"
    >
      Click me
    </span>
     
  </button>
</div>
`;

exports[`Button should have text if isLoading is false 1`] = `
<div>
  <button
    class="flex justify-center items-center font-semibold leading-6 border border-gray-300 disabled:opacity-70 disabled:cursor-not-allowed rounded-md shadow-sm focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 bg-blue-600 text-white hover:bg-blue-500  focus-visible:outline-blue-600 px-6 py-2 text-md"
    type="button"
  >
    <span
      class="mx-2"
      data-testid="button-text"
    >
      Click me
    </span>
     
  </button>
</div>
`;

exports[`Button should match snapshot 1`] = `
<div>
  <button
    class="flex justify-center items-center font-semibold leading-6 border border-gray-300 disabled:opacity-70 disabled:cursor-not-allowed rounded-md shadow-sm focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 bg-blue-600 text-white hover:bg-blue-500  focus-visible:outline-blue-600 px-6 py-2 text-md"
    type="button"
  >
    <span
      class="mx-2"
      data-testid="button-text"
    />
     
  </button>
</div>
`;
